unpackaged/main/default/objects/Committee_Chair_Member__c/Committee_Chair_Member__c.object-meta.xml
<CustomObject>
    <label>Committee Chair Member</label>
    <nameField>
        <displayFormat>Member-{00000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Chair Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>