unpackaged/main/default/objects/Committee_Chair_Member__c/fields/Committee_Chair__c.field-meta.xml
<CustomField>
    <fullName>Committee_Chair__c</fullName>
    <label>Committee Chair</label>
    <referenceTo>Committee_Chair__c</referenceTo>
    <relationshipLabel>Committee Chair Members</relationshipLabel>
    <relationshipName>Committee_Chair_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>